# venezia

./: .gitignore  meson.build
include/venezia/: venezia-lexer.hpp  venezia-token.hpp  venezia.hpp
source/: main.cpp
tests/: lexer.cpp  meson.build  token.cpp
